Added onze diensten, clients, and cultuur. Cultuur has still a bit work left to do. Skipped the bar under clients, will do tomorrow.

--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet">
+        <link rel="stylesheet" href="css/icon-font.css">
+        <link rel="stylesheet" href="css/arrows.css">
         <link rel="stylesheet" href="css/style.css">
         <link rel="shortcut icon" type="image/png" href="img/logosmall.png">
 
@@ -32,7 +34,7 @@
           </div>
         </header>
       <main>
-        <section class="section-overons">
+        <section class="section-overons u-margin-bottom-medium">
           <div class="row">
             <div class="col-1-of-2">
               <img src="https://images.unsplash.com/photo-1488751045188-3c55bbf9a3fa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2734&q=80" alt="photo1" class="photo1">
@@ -41,7 +43,80 @@
               <h4 class="heading-four heading-four--blue u-margin-top-big u-margin-bottom-medium">02-Over ons</h4>
               <h1 class="heading-primary heading-primary--main heading-primary--main--black"> Wij gaan tot het uiterste en daar voorbij.</h1>
               <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla asperiores dolores magnam doloribus, itaque unde quia sint, earum expedita, reiciendis beatae eius architecto! Nam quo soluta quos hic recusandae veritatis.</p>
-              <a href="#" class="btn btn--empty">Learn more</a>
+              <a href="#" class="btn btn--empty u-margin-bottom-big">Learn more</a>
+            </div>
+          </div>
+        </section>
+        <section class="onzed">
+          <div class="row">
+            <div class="col-1-of-2">
+              <h4 class="heading-four heading-four--blue u-margin-top-big u-margin-bottom-big">03-Onze Diensten</h4>
+              <i class="link-icon link-icon--1 icon-arrows-slim-right"></i>
+              <a href="#" class="links u-margin-bottom-small"> Interim </a>
+              <i class="link-icon link-icon--2 icon-arrows-circle-left"></i>
+              <p class="paragraph u-margin-bottom-medium">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla asperiores dolores magnam doloribus, itaque unde quia sint, earum expedita, reiciendis beatae eius architecto! Nam quo soluta quos hic recusandae veritatis.</p>
+              <h1 class="heading-primary heading-primary--main heading-primary--main--black"> Sourcing <br>Strategisch advies</h1>
+            </div>
+            <div class="col-1-of-2">
+              <div class="container">
+                <div class="carousel">
+                  <input type="radio" id="carousel-1" name="carousel[]" checked>
+                  <input type="radio" id="carousel-2" name="carousel[]">
+                  <input type="radio" id="carousel-3" name="carousel[]">
+                  <ul class="carousel__items">
+                  	<li class="carousel__item"><img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80" alt=""></li>
+                  	<li class="carousel__item"><img src="https://images.unsplash.com/photo-1533264515790-38b563064b68?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=958&q=80" alt=""></li>
+                  	<li class="carousel__item"><img src="https://images.unsplash.com/photo-1484516758160-69878111a911?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=987&q=80" alt=""><
+                  </ul>
+                  <div class="carousel__prev">
+                    <label for="carousel-1"></label>
+                  	<label for="carousel-2"></label>
+                    <label for="carousel-3"></label>
+                  </div>
+                  <div class="carousel__next">
+                    <label for="carousel-1"></label>
+                    <label for="carousel-2"></label>
+                    <label for="carousel-3"></label>
+                  </div>
+                  <div class="carousel__nav">
+                    <label for="carousel-1"></label>
+                    <label for="carousel-2"></label>
+                    <label for="carousel-3"></label>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </section>
+        <section class="clients u-margin-top-big">
+          <div class="row">
+            <div class="col-1-of-2">
+              <h4 class="heading-four heading-four--white u-margin-top-big u-margin-bottom-big">04-Clients</h4>
+              <h1 class="heading-primary heading-primary--main u-margin-top-big"> Already more than 5,500 clients.</h1>
+              <a href="#" class="btn btn--white">Learn more</a>
+            </div>
+            <div class="col-1-of-2">
+            </div>
+          </div>
+        </section>
+        <section class="cultuur">
+          <div class="row">
+            <div class="col-1-of-2">
+              <h4 class="heading-four heading-four--blue u-margin-top-big u-margin-bottom-medium">05-Cultuur</h4>
+              <img src="https://images.unsplash.com/photo-1493711662062-fa541adb3fc8?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="photo2" class="photo2">
+            </div>
+            <div class="col-1-of-2">
+              <img src="https://images.unsplash.com/photo-1515773512591-dfaf9e052325?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80" alt="photo3" class="photo3">
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-1-of-2">
+              <img src="https://images.unsplash.com/photo-1461748659110-16121c049d52?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="photo4" class="photo4">
+            </div>
+            <div class="col-1-of-2">
+              <h1 class="heading-primary heading-primary--main heading-primary--main--black"> Headline for the culture.</h1>
+              <p class="paragraph">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Nulla asperiores dolores magnam doloribus, itaque unde quia sint.</p>
+              <a href="#" class="btn btn--empty u-margin-bottom-big">Learn more</a>
             </div>
           </div>
         </section>
