Finished cultuur. Fixed a few stuff all around the website. Finished the job aplication part. Finished the footer. All is left is the bar after clients.

--- a/index.html
+++ b/index.html
@@ -34,10 +34,14 @@
           </div>
         </header>
       <main>
+
+        <!-- Over ons -->
         <section class="section-overons u-margin-bottom-medium">
           <div class="row">
             <div class="col-1-of-2">
-              <img src="https://images.unsplash.com/photo-1488751045188-3c55bbf9a3fa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2734&q=80" alt="photo1" class="photo1">
+              <div class="sizephoto">
+                <img src="https://images.unsplash.com/photo-1488751045188-3c55bbf9a3fa?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=2734&q=80" alt="photo1" class="sizephoto sizephoto__photo1">
+              </div>
             </div>
             <div class="col-1-of-2">
               <h4 class="heading-four heading-four--blue u-margin-top-big u-margin-bottom-medium">02-Over ons</h4>
@@ -47,6 +51,8 @@
             </div>
           </div>
         </section>
+
+        <!-- Onze Diensten -->
         <section class="onzed">
           <div class="row">
             <div class="col-1-of-2">
@@ -66,7 +72,7 @@
                   <ul class="carousel__items">
                   	<li class="carousel__item"><img src="https://images.unsplash.com/photo-1517841905240-472988babdf9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=934&q=80" alt=""></li>
                   	<li class="carousel__item"><img src="https://images.unsplash.com/photo-1533264515790-38b563064b68?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=958&q=80" alt=""></li>
-                  	<li class="carousel__item"><img src="https://images.unsplash.com/photo-1484516758160-69878111a911?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=987&q=80" alt=""><
+                  	<li class="carousel__item"><img src="https://images.unsplash.com/photo-1484516758160-69878111a911?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=987&q=80" alt=""></li>
                   </ul>
                   <div class="carousel__prev">
                     <label for="carousel-1"></label>
@@ -88,30 +94,42 @@
             </div>
           </div>
         </section>
+
+
+        <!-- Clients -->
         <section class="clients u-margin-top-big">
           <div class="row">
             <div class="col-1-of-2">
               <h4 class="heading-four heading-four--white u-margin-top-big u-margin-bottom-big">04-Clients</h4>
               <h1 class="heading-primary heading-primary--main u-margin-top-big"> Already more than 5,500 clients.</h1>
-              <a href="#" class="btn btn--white">Learn more</a>
+              <a href="#" class="btn btn--white u-margin-bottom-big">Learn more</a>
             </div>
             <div class="col-1-of-2">
             </div>
           </div>
         </section>
+
+
+        <!-- Cultuur -->
         <section class="cultuur">
           <div class="row">
             <div class="col-1-of-2">
-              <h4 class="heading-four heading-four--blue u-margin-top-big u-margin-bottom-medium">05-Cultuur</h4>
-              <img src="https://images.unsplash.com/photo-1493711662062-fa541adb3fc8?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="photo2" class="photo2">
+              <div class="sizing">
+                <h4 class="heading-four heading-four--blue u-margin-top-big u-margin-bottom-medium">05-Cultuur</h4>
+                <img src="https://images.unsplash.com/photo-1493711662062-fa541adb3fc8?ixlib=rb-1.2.1&auto=format&fit=crop&w=1950&q=80" alt="photo2" class="sizing sizing__photo2">
+              </div>
             </div>
             <div class="col-1-of-2">
-              <img src="https://images.unsplash.com/photo-1515773512591-dfaf9e052325?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80" alt="photo3" class="photo3">
+              <div class="sizing">
+                <img src="https://images.unsplash.com/photo-1515773512591-dfaf9e052325?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=975&q=80" alt="photo3" class="sizing sizing__photo3">
+              </div>
             </div>
           </div>
           <div class="row">
             <div class="col-1-of-2">
-              <img src="https://images.unsplash.com/photo-1461748659110-16121c049d52?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="photo4" class="photo4">
+              <div class="sizing">
+                <img src="https://images.unsplash.com/photo-1461748659110-16121c049d52?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80" alt="photo4" class="sizing sizing__photo4">
+              </div>
             </div>
             <div class="col-1-of-2">
               <h1 class="heading-primary heading-primary--main heading-primary--main--black"> Headline for the culture.</h1>
@@ -119,6 +137,72 @@
               <a href="#" class="btn btn--empty u-margin-bottom-big">Learn more</a>
             </div>
           </div>
+        </section>
+
+
+        <!-- Vacancies -->
+        <section class="vacancies u-margin-bottom-medium">
+          <div class="u-center-text">
+          <h1 class="heading-primary heading-primary--main heading-primary--main--black u-margin-top-big"> Last vacancies<sup class="circle">16</sup</h1>
+        </div>
+        <div class="row">
+          <div class="col-1-of-3">
+            <div class="feature-box">
+              <p class="yellowlab u-margin-bottom-small"> Senior </p>
+              <a href="#" class=" heading-tertiary u-margin-bottom-small"> Marketing Consultant </a>
+              <p class="cardsparagraph">You are creative, ambitious and proactive</p>
+              <p class="cardsparagraph">You work independently and pick up things yourself</p>
+              <p class="cardsparagraph">You stand firmly in your shoes and are enthusiastic</p>
+              <a href="#" class="heading-tertiary heading-tertiary__small u-margin-bottom-small"> View this vacancy<sub><i class="link-icon link-icon--3 icon-arrows-circle-left"></i><sub> </a>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="feature-box">
+              <p class="yellowlab u-margin-bottom-small"> Senior </p>
+              <a href="#" class=" heading-tertiary u-margin-bottom-small"> Marketing Consultant </a>
+              <p class="cardsparagraph">You are creative, ambitious and proactive</p>
+              <p class="cardsparagraph">You work independently and pick up things yourself</p>
+              <p class="cardsparagraph">You stand firmly in your shoes and are enthusiastic</p>
+              <a href="#" class="heading-tertiary heading-tertiary__small u-margin-bottom-small"> View this vacancy<sub><i class="link-icon link-icon--3 icon-arrows-circle-left"></i><sub> </a>
+            </div>
+          </div>
+          <div class="col-1-of-3">
+            <div class="feature-box">
+              <p class="yellowlab u-margin-bottom-small"> Senior </p>
+              <a href="#" class=" heading-tertiary u-margin-bottom-small"> Marketing Consultant </a>
+              <p class="cardsparagraph">You are creative, ambitious and proactive</p>
+              <p class="cardsparagraph">You work independently and pick up things yourself</p>
+              <p class="cardsparagraph">You stand firmly in your shoes and are enthusiastic</p>
+              <a href="#" class="heading-tertiary heading-tertiary__small u-margin-bottom-small"> View this vacancy<sub><i class="link-icon link-icon--3 icon-arrows-circle-left"></i><sub> </a>
+            </div>
+          </div>
+        </div>
+        </section>
+
+
+        <!-- Footer -->
+        <section class="footer">
+          <div class="footer footer__size">
+            <p class="logopara u-center-text"> Reqruitment</p>
+            <ul class="navlist1">
+              <li class="navlist1__el1"><a href="#">Reqruitment</a></li>
+              <li class="navlist1__el1"><a href="#">Over ons</a></li>
+              <li class="navlist1__el1"><a href="#">Onze diensten</a></li>
+              <li class="navlist1__el1"><a href="#">Cultuur</a></li>
+              <li class="navlist1__el1"><a href="#">Werken bij</a></li>
+            </ul>
+            <div class="row u-margin-top-big">
+            <div class="col-1-of-4">
+              <p class="paraend">Toni Golloshi</p>
+            </div>
+            <div class="col-1-of-4">
+            </div>
+            <div class="col-1-of-4">
+            </div>
+            <div class="col-1-of-4">
+            </div>
+          </div>
+        </div>
         </section>
       </main>
     </body>
