Finished the project

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </header>
       <main>
 
-        <!-- Over ons -->
+<!-- Over ons -->
         <section class="section-overons u-margin-bottom-medium">
           <div class="row">
             <div class="col-1-of-2">
@@ -52,7 +52,7 @@
           </div>
         </section>
 
-        <!-- Onze Diensten -->
+<!-- Onze Diensten -->
         <section class="onzed">
           <div class="row">
             <div class="col-1-of-2">
@@ -96,21 +96,52 @@
         </section>
 
 
-        <!-- Clients -->
+  <!-- Clients -->
         <section class="clients u-margin-top-big">
           <div class="row">
             <div class="col-1-of-2">
               <h4 class="heading-four heading-four--white u-margin-top-big u-margin-bottom-big">04-Clients</h4>
               <h1 class="heading-primary heading-primary--main u-margin-top-big"> Already more than 5,500 clients.</h1>
-              <a href="#" class="btn btn--white u-margin-bottom-big">Learn more</a>
+              <a href="#" class="btn btn--white u-margin-bottom-bigger">Learn more</a>
             </div>
             <div class="col-1-of-2">
             </div>
           </div>
         </section>
 
+<!-- horizontal carousel -->
+        <section class="horizontalcar">
+          <div class="container1">
+            <div class="carousel1">
+              <input type="radio" id="carousel-11" name="carousel1[]" checked>
+              <input type="radio" id="carousel-21" name="carousel1[]">
+              <input type="radio" id="carousel-31" name="carousel1[]">
+              <ul class="carousel1__items1">
+                <li class="carousel1__item1"><img src="https://d2v9y0dukr6mq2.cloudfront.net/video/thumbnail/itCjTBE/white-abstract-flowing-wavy-motion-background-video-animation-ultra-hd-4k-3840x2160_bocxlctw__F0000.png" alt=""></li>
+                <li class="carousel1__item1"><img src="https://images.vexels.com/media/users/3/144709/preview2/95b04989b71b9375d9d04c3ee50cfc05-abstract-white-background-or-backdrop.jpg" alt=""></li>
+                <li class="carousel1__item1"><img src="https://ak8.picdn.net/shutterstock/videos/18137098/thumb/11.jpg" alt=""></li>
+              </ul>
+              <div class="carousel1__prev1">
+                <label for="carousel-11"></label>
+                <label for="carousel-21"></label>
+                <label for="carousel-31"></label>
+              </div>
+              <div class="carousel1__next1">
+                <label for="carousel-11"></label>
+                <label for="carousel-21"></label>
+                <label for="carousel-31"></label>
+              </div>
+              <div class="carousel1__nav1">
+                <label for="carousel-11"></label>
+                <label for="carousel-21"></label>
+                <label for="carousel-31"></label>
+              </div>
+            </div>
+          </div>
+        </section>
 
-        <!-- Cultuur -->
+
+<!-- Cultuur -->
         <section class="cultuur">
           <div class="row">
             <div class="col-1-of-2">
@@ -140,7 +171,7 @@
         </section>
 
 
-        <!-- Vacancies -->
+<!-- Vacancies -->
         <section class="vacancies u-margin-bottom-medium">
           <div class="u-center-text">
           <h1 class="heading-primary heading-primary--main heading-primary--main--black u-margin-top-big"> Last vacancies<sup class="circle">16</sup</h1>
@@ -180,7 +211,7 @@
         </section>
 
 
-        <!-- Footer -->
+<!-- Footer -->
         <section class="footer">
           <div class="footer footer__size">
             <p class="logopara u-center-text"> Reqruitment</p>
